--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first github page</title>
-</head>
-<body>
-    <h1>This is my first github page</h1>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Gamedev Canvas Workshop</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <link rel="stylesheet" href="css/style.css">
+
+    </head>
+    <body>
+        <canvas id="myCanvas" width="1000" height="500"></canvas>
+        <script type="text/javascript" src="js/main.js"></script>
+    </body>
 </html>
